# chat-server

./: .gitignore  CMakeLists.txt  Makefile  README.md  requirements.txt  项目优化说明.md
app/: __init__.py  config.py  database.py  events.py  main.py  schemas.py  services.py
cpp_server/include/: app.hpp  http.hpp  json.hpp
cpp_server/src/: app.cpp  http.cpp  main.cpp
frontend/: index.html  package-lock.json  package.json
frontend/src/: main.jsx  styles.css
scripts/: smoke_test.py  smoke_test_cpp.mjs
